--- a/src/styles/global/base.css
+++ b/src/styles/global/base.css
@@ -62,6 +62,10 @@ h6{
   font-family: Inter-Regular;
 }
 
+p{
+  font-size: 14px;
+}
+
 .icon{
   display: block;
 }
